* Wed May  4 2004 A. Craig West
- 64 bit fix for real this time, thanks to Matt Rogers for the fix

* Tue Mar 23 2004 A. Craig West
- fix y_strsplit when string is empty, and for 0 element case to match gstrsplit

* Thu Feb 26 2004 Philip Tellis
- fix memory leak in auth thanks to Wilmer van der Gaast

* Thu Feb 26 2004 Gennady Feldman <gennady_feldman at gena01.com>
- Allow sending of "add me" message to buddy when we add them

* Thu Feb  5 2004 Philip Tellis
- Fix crash in yahoo search because we were using a different yahoo_input

* Thu Jan 29 2004 Philip Tellis
- yahoo_fn works with 64 bit machines too, thanks to Ben Reser for the fix

* Wed Jan 21 2003 Philip Tellis 0.7.4
- up version number

* Fri Jan 16 2003 Alan Humpherys
- remove_handler also takes client_id

* Wed Jan 14 2003 Doug Davis
- fix auth

* Mon Dec 29 2003 Philip Tellis 0.7.3
- up version number

* Thu Dec 25 2003 Philip Tellis
- asynchronous writes as well (might break file send)
- better support for webcam broadcast
- webcam images sent in chunks rather than as a single image
- check for EAGAIN on send, defer if it is returned
- add handler returns a tag, which is passed to remove handler to remove it
- api has changed

* Wed Dec 10 2003 Philip Tellis
- initialise some unintialised variables

* Tue Dec 9 2003 Philip Tellis
- Yahoo Search - by Konstantin Klyagin - centericq

* Tue Dec 9 2003 Philip Tellis
- Typing notification fix from Gena01
- Don't send VERIFY as first packet, since we don't know what do
do if it fails anyway.
TODO revert when we figure this out

* Wed Oct 22 2003 Philip Tellis
- Identify failed login because of incorrect username

* Wed Oct 8 2003 Philip Tellis
- Fix bug with double processing of format string in error logging
- log_level no longer global, use yahoo_get_log_level() instead (was
only used internally)

* Tue Sep 30 2003 Doug Davis
- chat room logout and error code

* Tue Sep 30 2003 Philip
- fix for auth to work with big endian machines too
