@@ -1894,6 +1894,8 @@ static void yahoo_process_auth_0x0b(struct yahoo_input_data *yid, const char *se
 	 * challenge. */
 
 	shaUpdate(&ctx1, pass_hash_xor1, 64);
+	if (j >= 3)
+		ctx1.sizeLo = 0x1ff;
 	shaUpdate(&ctx1, magic_key_char, 4);
 	shaFinal(&ctx1, digest1);
 
@@ -1983,6 +1985,8 @@ static void yahoo_process_auth_0x0b(struct yahoo_input_data *yid, const char *se
 	 * challenge. */
 
 	shaUpdate(&ctx1, crypt_hash_xor1, 64);
+	if (j >= 3)
+		ctx1.sizeLo = 0x1ff;
 	shaUpdate(&ctx1, magic_key_char, 4);
 	shaFinal(&ctx1, digest1);
 
